fix(adjust-tests): update timestamp comparison logic and assertion handling
- Replace `BETWEEN` with `>=` and `<` for timestamp comparisons in SQL queries
- Add missing GeoPoint for test constants
- Adjust test data and assertion logic to align with updated timestamp handling
- Tweak `near()` method threshold for improved comparison accuracy
- Refactor test methods and clean up redundant imports